testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_right_bracket/case11.expect.out
error: expected '}', found '2'
  ==> case11.cj:15:24:
   | 
15 |     cangjie ${"\u{12312324244"}
   |                  ~        ^ expected '}'
   |                  |
   |                  to match this opening '{'
   | 
   # note: unicode escape may contain 8 hexadecimal digits at most

1 error generated, 1 error printed.
